# maliput_object-release

./: CHANGELOG.rst  CMakeLists.txt  LICENSE  README.md  debian.store  package.xml  patches.conf  tracks.yaml
.github/: dependencies.repos
.github/workflows/: build.yml  sanitizers.yml  scan_build.yml
debian/: changelog  control  copyright  gbp.conf  rules
include/: CMakeLists.txt
include/maliput_object/: CMakeLists.txt
include/maliput_object/api/: bounding_region.h  object.h  object_book.h  object_query.h  overlapping_type.h
include/maliput_object/base/: bounding_box.h  manual_object_book.h  simple_object_query.h
include/maliput_object/loader/: loader.h
include/maliput_object/test_utilities/: mock.h
src/: CMakeLists.txt
src/api/: CMakeLists.txt  object.cc  overlapping_type.cc
src/base/: CMakeLists.txt  bounding_box.cc  manual_object_book.cc  simple_object_query.cc
src/loader/: CMakeLists.txt  loader.cc
test/: CMakeLists.txt
test/api/: CMakeLists.txt  bounding_region_test.cc  object_book_test.cc  object_query_test.cc  object_test.cc  overlapping_type_test.cc
test/base/: CMakeLists.txt  bounding_box_test.cc  manual_object_book_test.cc  simple_object_query_test.cc
test/loader/: CMakeLists.txt  loader_test.cc
